improve docker tag

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,26 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Crete Docker Tag
+        id: create-docker-tag
+        outputs:
+          docker_tag: ${{ steps.get-latest-tag.outputs.latest_tag }}.${{ github.event.inputs.build_number }}
+        run: |
+          LATEST_GITHUB_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+          echo "LATEST_GITHUB_TAG=$LATEST_GITHUB_TAG" >> $GITHUB_OUTPUT
+
       - name: Build Docker Image
         run: |
-          docker build -t dieguscl/component-a:${{ github.event.inputs.build_number }} .
-          docker tag dieguscl/component-a:${{ github.event.inputs.build_number }} dieguscl/component-a:latest
+          docker build -t dieguscl/component-a:$DOCKER_TAG .
+          docker tag dieguscl/component-a:$DOCKER_TAG dieguscl/component-a:latest
+        env:
+          DOCKER_TAG: ${{ steps.create-docker-tag.outputs.docker_tag }}
 
       - name: Push Docker Image
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker push dieguscl/component-a:${{ github.event.inputs.build_number }}
+          docker push dieguscl/component-a:$DOCKER_TAG
           docker push dieguscl/component-a:latest
+        env:
+          DOCKER_TAG: ${{ steps.create-docker-tag.outputs.docker_tag }}
 
